# flight_tracker

./: .gitignore  1.0  MinimalServer.py  flight_checker.py  flight_tracker_mcp.py  ft.bat  main.py  pyproject.toml  pyproject.toml.backup  requirements.txt
.github/workflows/: publish-to-pypi.yml
flight_tracker_env/: pyvenv.cfg
flight_tracker_env/Scripts/: activate  activate.bat
flight_tracker_mcp/: __init__.py  __main__.py
