[project]
name = "flight-tracker-mcp"
version = "0.1.0"
description = "MCP Server for flight tracking using OpenSky Network API"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Eric", email = "your-email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mcp", "flight", "tracking", "aviation", "opensky"]
dependencies = [
    "mcp[cli]>=1.11.0",
    "opensky-api>=1.3.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/GenAICPA/flight_tracker"
Repository = "https://github.com/GenAICPA/flight_tracker"
Issues = "https://github.com/GenAICPA/flight_tracker/issues"

[project.scripts]
flight-tracker-mcp = "flight_tracker_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
